<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/alias_edit"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/alias"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ip_edit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/ip"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alias_edit" />

        <EditText
            android:id="@+id/web_port_edit"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/web_port"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/ip_edit"
            app:layout_constraintTop_toBottomOf="@+id/alias_edit" />

        <EditText
            android:id="@+id/ssh_port_edit"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/ssh_port"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/web_port_edit"
            app:layout_constraintTop_toBottomOf="@+id/alias_edit" />

    </LinearLayout>

    <EditText
        android:id="@+id/uname_edit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_edit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pass_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uname_edit" />

        <Switch
            android:id="@+id/showHide_edit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/show"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/pass_input"
            app:layout_constraintTop_toBottomOf="@+id/uname_input"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/testBtn_edit"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/testConn"
        android:textSize="18sp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_edit" />

    <TextView
        android:id="@+id/testStatus_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/connSuccess"
        android:textSize="18sp"
        android:textColor="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testBtn_edit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/update"
            android:textSize="18sp"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testStatus_edit" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/delete"
            android:textSize="18sp"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testStatus_edit" />

    </LinearLayout>

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/connect"
        android:textSize="18sp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn" />

    <TextView
        android:id="@+id/openingCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/openingCam"
        android:textSize="18sp"
        android:textColor="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectBtn" />

</LinearLayout>