<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/alias_input"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/alias"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ip_input"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/ip"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alias_input" />

        <EditText
            android:id="@+id/port_input"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/port"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/ip_input"
            app:layout_constraintTop_toBottomOf="@+id/alias_input" />

    </LinearLayout>

    <EditText
        android:id="@+id/uname_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_input" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uname_input" />

        <Switch
            android:id="@+id/showHide"
            android:layout_width="94dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/show"
            app:layout_constraintStart_toEndOf="@+id/pass_input"
            app:layout_constraintTop_toBottomOf="@+id/uname_input"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/testBtn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/testConn"
        android:textSize="18sp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_input" />

    <TextView
        android:id="@+id/testStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/connSuccess"
        android:textSize="18sp"
        android:textColor="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testBtn" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:textSize="18sp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testStatus" />

</LinearLayout>